@@ -36,6 +36,7 @@ namespace CXX
       extern Key generate_comparison;
       extern Key generate_default_ctor;
       extern Key generate_from_base_ctor;
+      extern Key suppress_assignment;
       extern Key generate_detach;
       extern Key generate_wildcard;
       extern Key generate_insertion;
@@ -135,6 +136,7 @@ namespace CXX
         generate_comparison,      Boolean,
         generate_default_ctor,    Boolean,
         generate_from_base_ctor,  Boolean,
+        suppress_assignment,      Boolean,
         generate_detach,          Boolean,
         generate_wildcard,        Boolean,
         generate_insertion,       Cult::Containers::Vector<NarrowString>,
